--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -37,102 +37,139 @@
 
 
     <body>
-        <link rel="stylesheet" type="text/css" href="~/Border.css" />
-
-        <div style="display: flex; justify-content: center;">
-            <img src="~/Pictures/SOSLogo.jpg" alt="Logo" width=1000 align="middle" /><img /><br />
-        </div>
-
-        <p>
-            <div style="display: flex; justify-content: center;">
-                <br /><iframe width="560" height="315" src="https://www.youtube.com/embed/oePBye4vrnA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="middle"></iframe><br />
-
-            </div>
-        </p><br />
-        <p>
-
-            <h2 style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">
-                <span style="color:red">Surgery On Sunday – Louisville, Inc.</span> provides outpatient surgical and endoscopic procedures to patients who are within 250% of the current federal poverty line, have medical need, are symptomatic and/or in a high risk healthcare category (such as family history), and are uninsured or underinsured.  Our licensed physicians, medical and non-clinical support staff,  and healthcare partners provide all services on a volunteer basis.  <span style="color:red"><b> Our patients never see a bill.</b></span> We are a non-profit organization based in Louisville, KY. Our program was founded in 2013 by a group of passionate medical professionals and members of the Louisville community.
-            </h2>
-        </p>
-
-        <h1>
-            <div style="display: flex; justify-content: center;">
-                Subscribe to our quarterly mailing list:<br />
-            </div>
-
-        </h1>
-        <p>
-            <div style="display: flex; justify-content: center; border:3px; border-style:solid; border-color:red; padding:1em;">
-                <table width="1000">
-                    <tr>
-                        <td valign="top">
-                            <label for="first_name"><b>First Name *</b></label>
-                        </td>
-                        <td valign="top">
-                            <input type="text" name="first_name" maxlength="50" size="30">
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td valign="top">
-                            <label for="last_name"><b>Last Name *</b></label>
-                        </td>
-                        <td valign="top">
-                            <input type="text" name="last_name" maxlength="50" size="30">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td valign="top">
-                            <label for="email"><b>Email Address *</b></label>
-                        </td>
-                        <td valign="top">
-                            <input type="text" name="email" maxlength="80" size="30">
-                        </td>
-
-                    </tr>
-                    <tr>
-                        <td colspan="2" style="text-align:center">
-                            <input type="submit" value="Subscribe">
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </p>
-        <p>
-            <h1>
-                <div style="display: flex; justify-content: center;">
-                    <b>Check us out on Social Media!</b>
-
-
-                </div>
-            </h1>
-
-
-            <section>
-
-                <img src="~/Pictures/twitterLogo.png" alt="Logo" width=80 height="80" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer; position:relative; top:30px; left:470px;" /><img />
-                <img src="~/Pictures/Facebooklogo.png" alt="Logo" width=85 height="85" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer; position:relative; top:30px; left:53px;" /><img />
-            </section><br />
-
-            <br /><br /> <section>
-
-                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSurgeryonSundayLouisville%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden;" scrolling="no" frameborder="0" allowTransparency="true"></iframe> <!--change position for widget using position:fixed-->
-
-
-
-                <a class="twitter-timeline" data-width="340" data-height="515" href="https://twitter.com/soslouisville?ref_src=twsrc%5Etfw">Tweets by soslouisville</a>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-            </section>
-
-
-
-        </p>
+    <table bgcolor="#A2F6F6" border="5" bordercolor="#4317BB" style="height: 450px; width: 200px;">
+        <tbody>
+            <tr bgcolor="#BF0934">
+                <td>
+                    <center>
+                        <b>Pac Man</b>
+                    </center>
+                    <table align="center" border="4" bordercolor="#000000" style="height: 300px; width: 300px;">
+                        <tbody>
+                            <tr bgcolor="#000000">
+                                <td>
+                                    <div align="center">
+                                        <span style="color: white; font-size: large;">
+                                            <b>
+                                                <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0" height="400" width="400">
+                                                    <param name="quality" value="high" /><param name="movie"
+                                                                                                value="http://www.pacman1980.com/pacman.swf" /><embed height="400"
+                                                                                                                                                      pluginspage="http://www.macromedia.com/go/getflashplayer" quality="high"
+                                                                                                                                                      src="http://www.pacman1980.com/pacman.swf" type="application/x-shockwave-flash"
+                                                                                                                                                      width="400"></embed>
+                                                </object>
+                                            </b>
+                                        </span>
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
 
 
 
 
 
 
-    </body>
+
+
+
+                    <link rel="stylesheet" type="text/css" href="~/Border.css" />
+
+                    <div style="display: flex; justify-content: center;">
+                        <img src="~/Pictures/SOSLogo.jpg" alt="Logo" width=1000 align="middle" /><img /><br />
+                    </div>
+
+                    <p>
+                        <div style="display: flex; justify-content: center;">
+                            <br /><iframe width="560" height="315" src="https://www.youtube.com/embed/oePBye4vrnA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="middle"></iframe><br />
+
+                        </div>
+                    </p><br />
+                    <p>
+
+                        <h2 style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">
+                            <span style="color:red">Surgery On Sunday – Louisville, Inc.</span> provides outpatient surgical and endoscopic procedures to patients who are within 250% of the current federal poverty line, have medical need, are symptomatic and/or in a high risk healthcare category (such as family history), and are uninsured or underinsured.  Our licensed physicians, medical and non-clinical support staff,  and healthcare partners provide all services on a volunteer basis.  <span style="color:red"><b> Our patients never see a bill.</b></span> We are a non-profit organization based in Louisville, KY. Our program was founded in 2013 by a group of passionate medical professionals and members of the Louisville community.
+                        </h2>
+                    </p>
+
+                    <h1>
+                        <div style="display: flex; justify-content: center;">
+                            Subscribe to our quarterly mailing list:<br />
+                        </div>
+
+                    </h1>
+                    <p>
+                        <div style="display: flex; justify-content: center; border:3px; border-style:solid; border-color:red; padding:1em;">
+                            <table width="1000">
+                                <tr>
+                                    <td valign="top">
+                                        <label for="first_name"><b>First Name *</b></label>
+                                    </td>
+                                    <td valign="top">
+                                        <input type="text" name="first_name" maxlength="50" size="30">
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td valign="top">
+                                        <label for="last_name"><b>Last Name *</b></label>
+                                    </td>
+                                    <td valign="top">
+                                        <input type="text" name="last_name" maxlength="50" size="30">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td valign="top">
+                                        <label for="email"><b>Email Address *</b></label>
+                                    </td>
+                                    <td valign="top">
+                                        <input type="text" name="email" maxlength="80" size="30">
+                                    </td>
+
+                                </tr>
+                                <tr>
+                                    <td colspan="2" style="text-align:center">
+                                        <input type="submit" value="Subscribe">
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </p>
+                    <p>
+                        <h1>
+                            <div style="display: flex; justify-content: center;">
+                                <b>Check us out on Social Media!</b>
+
+
+                            </div>
+                        </h1>
+
+
+                        <section>
+
+                            <img src="~/Pictures/twitterLogo.png" alt="Logo" width=80 height="80" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer; position:relative; top:30px; left:470px;" /><img />
+                            <img src="~/Pictures/Facebooklogo.png" alt="Logo" width=85 height="85" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer; position:relative; top:30px; left:53px;" /><img />
+                        </section><br />
+
+                        <br /><br /> <section>
+
+                            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSurgeryonSundayLouisville%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden;" scrolling="no" frameborder="0" allowTransparency="true"></iframe> <!--change position for widget using position:fixed-->
+
+
+
+                            <a class="twitter-timeline" data-width="340" data-height="515" href="https://twitter.com/soslouisville?ref_src=twsrc%5Etfw">Tweets by soslouisville</a>
+                            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+                        </section>
+
+
+
+                    </p>
+
+
+
+
+
+
+</body>
