FULL SCREEN CAROUSEL MF'ers

--- a/WebApplication3/Views/Home/BoardOfDirectors.cshtml
+++ b/WebApplication3/Views/Home/BoardOfDirectors.cshtml
@@ -5,11 +5,11 @@
 }
 <p>
     <link rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Border.css" />
-    <span align="left" style="font-size:30px;">Board of Directors</span><br /><br />
+    <span align="left" style="font-size:30px;padding-left:5vw; padding-right:5vw">Board of Directors</span><br /><br />
     <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
 
 
-    <div class="row">
+    <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:10%; float:left; padding-left:1vw">
 
 
@@ -25,7 +25,7 @@
 
     <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
 
-    <div class="row">
+    <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:10%; float:left; padding-left:1vw">
 
 
@@ -41,7 +41,7 @@
 
     <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
 
-    <div class="row">
+    <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:10%; float:left; padding-left:1vw">
 
 
@@ -57,7 +57,7 @@
 
     <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
 
-    <div class="row">
+    <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:10%; float:left; padding-left:1vw">
 
 
@@ -73,7 +73,7 @@
 
     <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
 
-    <div class="row">
+    <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:10%; float:left; padding-left:1vw">
 
 
@@ -89,7 +89,7 @@
 
     <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
 
-    <div class="row">
+    <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:10%; float:left; padding-left:1vw">
 
 
@@ -105,7 +105,7 @@
 
     <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
 
-    <div class="row">
+    <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:10%; float:left; padding-left:1vw">
 
 
@@ -121,7 +121,7 @@
 
     <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
 
-    <div class="row">
+    <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:10%; float:left; padding-left:1vw">
 
 
@@ -137,7 +137,7 @@
 
     <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
 
-    <div class="row">
+    <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:10%; float:left; padding-left:1vw">
 
 
@@ -153,7 +153,7 @@
 
     <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
 
-    <div class="row">
+    <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:10%; float:left; padding-left:1vw">
 
 
@@ -169,7 +169,7 @@
 
     <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
 
-    <div class="row">
+    <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:10%; float:left; padding-left:1vw">
 
 
