--- a/WebApplication3/Views/Home/Staff.cshtml
+++ b/WebApplication3/Views/Home/Staff.cshtml
@@ -6,7 +6,7 @@
 
 <p>
     <link rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Border.css" />
-    <h1 align="left" style="color:red; padding-left:0vw; padding-right:0vw">
+    <h1 align="left" style="color:red; padding-left:5vw; padding-right:5vw">
       <span style="color:black;">
           <b>Staff</b>
         </span><br /><br />
@@ -19,7 +19,7 @@
 
     <link rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Rotating pics.css" />
 
-    <div class="row">
+    <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:30%; float:left">
             <figure class="snip1581">
                 <img src="~/Pictures/EricaSOS.jpg" align="left" height="350" width="400" alt="profile-sample2" />
@@ -41,7 +41,7 @@
 
     <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
 
-    <div class="row">
+    <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:30%; float:left">
             <figure class="snip1581">
                 <img src="~/Pictures/SamSOS.png" align="left" height="350" width="400" alt="profile-sample2" />
@@ -63,7 +63,7 @@
     
     <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
 
-    <div class="row">
+    <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:30%; float:left">
             <figure class="snip1581">
                 <img src="~/Pictures/BeatrizSOS.jpeg" align="left" height="350" width="400" alt="profile-sample2" />
@@ -85,7 +85,7 @@
 
     <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
 
-    <div class="row">
+    <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:30%; float:left">
             <figure class="snip1581">
                 <img src="~/Pictures/JordanSOS.jpg" align="left" height="350" width="400" alt="profile-sample2" />
