--- a/WebApplication3/Custom_CSS_Styles/Border.css
+++ b/WebApplication3/Custom_CSS_Styles/Border.css
@@ -1,9 +1,9 @@
-﻿body {
+﻿/*body {
     border-right-color: lightgray;
     border-right-width: 12vw;
     border-right-style:solid;
     border-left-color: lightgray;
     border-left-width: 12vw;
     border-left-style:solid;
-}
+}*/
 
