--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -1,129 +1,180 @@
-﻿@{
+﻿
+
+@{
     ViewBag.Title = "About Us";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+
 <!--comment-->
-<title>W3.CSS</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+<head>
+     <link rel="stylesheet" href="~/Content/bootstrapNEW.Min.css" >
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link rel="stylesheet"href="~/Content/bootstrap.css" >
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    </head>
+
+
+        <div class="container-fluid" style="
+        margin-left:-1vw !important;
+        margin-right:-1vw!important;
+        margin-top:-1.6vw!important;
+        padding:0vw !important;
+        max-width:none !important;
+        max-height:none !important;
+        width:105%
 
 
 
-<h2 class="w3-center"><b>Come be a part of something truly special!</b></h2>
-<h3 class="w3-center pulsate">
-    <link class="pulsate" rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Pulsing effect.css" /> <img src="~/Pictures/Collage.png" height="400" width="650" /></h3>
 
-<div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
+        ">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width:100%">
+                <!-- Indicators -->
+    <ol class="carousel-indicators" align="middle">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
 
-<div class="w3-content w3-display-container">
-    <img class="mySlides" src="~/Pictures/SOS Collage.jpg" style="width:100%">
-    <img class="mySlides" src="~/Pictures/SOSShirtPic.jpg" style="width:100%">
-    <img class="mySlides" src="~/Pictures/SOS Pic.jpg" style="width:100%">
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
 
-    <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-    <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
-</div>
+        <div class="item active">
+            <img src="~/Pictures/SOS Collage.jpg" alt="Los Angeles" style="width:100%;">
+            <div class="carousel-caption">
+                <h3>We're here for YOU</h3>
 
-
-<script>
-    var slideIndex = 1;
-    showDivs(slideIndex);
-
-    function plusDivs(n) {
-        showDivs(slideIndex += n);
-    }
-
-    function showDivs(n) {
-        var i;
-        var x = document.getElementsByClassName("mySlides");
-        if (n > x.length) { slideIndex = 1 }
-        if (n < 1) { slideIndex = x.length }
-        for (i = 0; i < x.length; i++) {
-            x[i].style.display = "none";
-        }
-        x[slideIndex - 1].style.display = "block";
-    }
-</script>
-
-
-<body>
-    <link rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Border.css" />
-
-    <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
-    <p>
-        <div style="display: flex; justify-content: center;">
-            <br /><iframe width="560" height="315" src="https://www.youtube.com/embed/oePBye4vrnA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="middle"></iframe><br />
-
-        </div>
-    </p><br />
-
-    <p style="padding-left:6vw; padding-right:6vw">
-
-
-        <span style="color:red; font-size:32px">Surgery On Sunday – Louisville, Inc.</span><span style="font-size:20px"> provides outpatient surgical and endoscopic procedures to patients who are within 250% of the current federal poverty line, have medical need, are symptomatic and/or in a high risk healthcare category (such as family history), and are uninsured or underinsured.  Our licensed physicians, medical and non-clinical support staff,  and healthcare partners provide all services on a volunteer basis.</span>  <span style="color:red; font-size:25px"><b> Our patients never see a bill.</b></span> <span style="font-size:20px"> are a non-profit organization based in Louisville, KY. Our program was founded in 2013 by a group of passionate medical professionals and members of the Louisville community.</span>
-        <br /><div style="height:1px; background-color:black; padding-left:1vw; padding-right:1vw;"></div><br />
-    </p>
-
-    <h1>
-        <div style="display: flex; justify-content: center;">
-            <b> Subscribe to our quarterly mailing list:</b><br />
+            </div>
         </div>
 
-    </h1>
+        <div class="item">
+            <img src="~/Pictures/SOSShirtPic.jpg" alt="Chicago" style="width:100%;">
+            <div class="carousel-caption">
+                <h3>Our patients NEVER see a bill</h3>
 
-    <form class="form-style-9">
-        <link rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Form Style.css" />
-        <ul>
-            <li>
-                <input type="text" name="field1" class="field-style field-split align-left" placeholder="First Name" />
-            </li>
-            <li>
-                <input type="email" name="field2" class="field-style field-split align-left" placeholder="Last Name" />
-            </li>
-            <li>
-                <input type="text" name="field3" class="field-style field-full align-left" placeholder="Email Address" />
+            </div>
+        </div>
 
-            </li>
-            <li>
-                <input type="submit" value="Subscribe" class="align-left" />
-                <img src="~/Pictures/SosLouTranspar.png" style="padding-left:10vw" class="align-none" height="250" width="800" />
-            </li>
-        </ul>
-    </form>
+        <div class="item">
+            <img src="~/Pictures/SOS Pic.jpg" alt="New York" style="width:100%;">
+            <div class="carousel-caption">
+                <h3>Join us as we make our area a better place!</h3>
 
-    <br /><div style="height:1px; background-color:black; padding-left:1vw; padding-right:1vw;"></div><br />
-    <p>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+    </a>
+    </div>
+    </div>
+
+
+
+
+
+    <body>
+        <link rel="stylesheet" href="~/Content/bootstrap.css">
+
+        <p>
+
+            <h2 class="w3-center"><b>Come be a part of something truly special!</b></h2>
+            <h3 class="w3-center pulsate">
+                <link class="pulsate" rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Pulsing effect.css" /> <img src="~/Pictures/Collage.png" height="400" width="650" />
+            </h3>
+
+            <div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
+
+
+
+
+
+
+            <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
+        <p>
+            <div style="display: flex; justify-content: center;">
+                <br /><iframe width="560" height="315" src="https://www.youtube.com/embed/oePBye4vrnA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="middle"></iframe><br />
+
+            </div>
+        </p><br />
+
+        <p style="padding-left:6vw; padding-right:6vw">
+
+
+            <span style="color:red; font-size:32px">Surgery On Sunday – Louisville, Inc.</span><span style="font-size:20px"> provides outpatient surgical and endoscopic procedures to patients who are within 250% of the current federal poverty line, have medical need, are symptomatic and/or in a high risk healthcare category (such as family history), and are uninsured or underinsured.  Our licensed physicians, medical and non-clinical support staff,  and healthcare partners provide all services on a volunteer basis.</span>  <span style="color:red; font-size:25px"><b> Our patients never see a bill.</b></span> <span style="font-size:20px"> are a non-profit organization based in Louisville, KY. Our program was founded in 2013 by a group of passionate medical professionals and members of the Louisville community.</span>
+            <br /><div style="height:1px; background-color:black; padding-left:1vw; padding-right:1vw;"></div><br />
+        </p>
+
         <h1>
             <div style="display: flex; justify-content: center;">
-                <b>Check us out on Social Media!</b>
-
-
+                <b> Subscribe to our quarterly mailing list:</b><br />
             </div>
+
         </h1>
 
+        <form class="form-style-9">
+            <link rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Form Style.css" />
+            <ul>
+                <li>
+                    <input type="text" name="field1" class="field-style field-split align-left" placeholder="First Name" />
+                </li>
+                <li>
+                    <input type="email" name="field2" class="field-style field-split align-left" placeholder="Last Name" />
+                </li>
+                <li>
+                    <input type="text" name="field3" class="field-style field-full align-left" placeholder="Email Address" />
 
-        <br /><br /> <section>
-            <img src="~/Pictures/twitterLogo.png" alt="Logo" width=80 height="80" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer; position:relative; top:0px; left:730px;" /><img />
-            <img src="~/Pictures/Facebooklogo.png" alt="Logo" width=85 height="85" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer; position:relative; top:0px; left:200px;" /><img /><br />
+                </li>
+                <li>
+                    <input type="submit" value="Subscribe" class="align-left" />
+                    <img src="~/Pictures/SosLouTranspar.png" style="padding-left:10vw" class="align-none" height="250" width="800" />
+                </li>
+            </ul>
+        </form>
 
-            <br />
-            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSurgeryonSundayLouisville%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden; position:relative; left:10vw; top:0vw" scrolling="no" frameborder="0" allowTransparency="true"></iframe> <!--change position for widget using position:fixed-->
-
-
-            <div style="position:relative; top:-34.5vw; left:40vw">
-                <a class="twitter-timeline" data-width="340" data-height="515" href="https://twitter.com/soslouisville?ref_src=twsrc%5Etfw">Tweets by soslouisville</a>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            </div>
-
-        </section>
-
+        <br /><div style="height:1px; background-color:black; padding-left:1vw; padding-right:1vw;"></div><br />
+        <p>
+            <h1>
+                <div style="display: flex; justify-content: center;">
+                    <b>Check us out on Social Media!</b>
 
 
-    </p>
+                </div>
+            </h1>
+
+
+            <br /><br /> <section>
+                <img src="~/Pictures/twitterLogo.png" alt="Logo" width=80 height="80" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer; position:relative; top:0px; left:730px;" /><img />
+                <img src="~/Pictures/Facebooklogo.png" alt="Logo" width=85 height="85" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer; position:relative; top:0px; left:200px;" /><img /><br />
+
+                <br />
+                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSurgeryonSundayLouisville%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden; position:relative; left:10vw; top:0vw" scrolling="no" frameborder="0" allowTransparency="true"></iframe> <!--change position for widget using position:fixed-->
+
+
+                <div style="position:relative; top:-34.5vw; left:40vw">
+                    <a class="twitter-timeline" data-width="340" data-height="515" href="https://twitter.com/soslouisville?ref_src=twsrc%5Etfw">Tweets by soslouisville</a>
+                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                </div>
+
+
+            </section>
 
 
 
+        </p>
+
+    </body>
 
 
-</body>
+
