--- a/WebApplication3/Views/GetInvolved/GetInvolved.cshtml
+++ b/WebApplication3/Views/GetInvolved/GetInvolved.cshtml
@@ -11,164 +11,15 @@
 <br />
 <p><br />We are always looking for clinical and non-clinical volunteers who are as passionate about care as we are. If you are interested in serving with us, please click on the appropriate link below. Please note that for clinical volunteers, credentialing takes approximately 30 days to process.</p>
 
- <!-- Main form -->
-<div class="grid-50 tablet-grid-50 mobile-grid-100">
-    <div class="infoCard formPanel campaignInfo">
-        <form class="simple_form new_registration" id="new_registration" enctype="multipart/form-data" action="/public/registrations" accept-charset="UTF-8" method="post">
-            <input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="WepQ+66Nt1D7WsXG6m4SRF3qKaCYZTlWCBNeqMGdeR7yjmUOYAsmZeDkLvwR/TR2wVtloNJj7v4sCTpHwj5h+A==" />
 
-            <h2 id="registration_form_heading"></h2>
+<p><a style="color:crimson" href="~/GetInvolved/NonPhysicianClinicalForm">Non-Physician Clinical Volunteer</a></p>
 
-            <div id="error_explanation">
-                <ul></ul>
-            </div>
+<p><a  style="color:crimson" href="~/GetInvolved/PhysicianForm">Physician Volunteer</a></p>
 
-            <input type="hidden" value="976f3995-43f5-4496-b0cb-0a3fdb2258ec" name="registration[registration_form_id]" id="registration_registration_form_id" />
+<p><a style="color:crimson" href="~/GetInvolved/GeneralForm">Non-Clinical General (and student) Volunteer</a></p>
 
+<p><a style="color:crimson" href="~/GetInvolved/MedicalInterpreterVolunteer">Medical Interpreter Volunteer</a></p>
 
-            <input type="hidden" value="2496" name="registration[person_attributes][organization_id]" id="registration_person_attributes_organization_id" />
+<p>If you have questions, please email <span style="color:crimson">volunteer@soslouisville.org</span></p>
 
-
-
-            <label>First Name</label>
-            <div>
-                <div><input required maxlength="50" aria-required="true" size="1000" type="text" /></div>
-            </div>
-
-
-
-            <label>Last Name</label>
-            <div>
-                <div><input required maxlength="50" aria-required="true" size="1000" type="text" /></div>
-            </div>
-
-
-            <label>Address</label>
-            <div>
-                <div><input required maxlength="50" aria-required="true" size="1000" type="text" /></div>
-            </div>
-
-            <label>City</label>
-            <div>
-                <div><input required maxlength="50" aria-required="true" size="1000" type="text" /></div>
-            </div>
-
-            <label>State</label>
-            <div>
-                <div><input required maxlength="50" aria-required="true" size="1000" type="text" /></div>
-            </div>
-
-            <label>Postal Code</label>
-            <div>
-                <div><input required maxlength="12" aria-required="true" size="1000" type="text" /></div>
-            </div>
-
-            <label>Mobile Phone</label>
-            <div>
-                <div><input required maxlength="15" aria-required="true" size="1000" type="tel" /></div>
-            </div>
-
-            <label>Email</label>
-            <div>
-                <div><input required maxlength="100" aria-required="true" size="1000" type="text" /></div>
-            </div>
-
-            <label>Birthday</label>
-            <div>
-                <div><input required maxlength="50" aria-required="true" size="1000" type="date" /></div>
-            </div>
-
-            <label>Medical Specialty</label>
-            <div>
-                <div><input required maxlength="1000" aria-required="true" size="1000" type="text" /></div>
-            </div>
-
-            <div>
-                <label>* What/which state(s) are you licensed to practice in? </label>
-                <br />
-
-                <input name="registration[person_attributes][custom_field_answers][12935][]" type="hidden" value="" /><select class="multi-select required" multiple="multiple" id="registration_person_attributes_custom_field_answers_12935" name="registration[person_attributes][custom_field_answers][12935][]">
-                    <option value="AL">AL</option>
-                    <option value="AK">AK</option>
-                    <option value="AZ">AZ</option>
-                    <option value="AR">AR</option>
-                    <option value="CA">CA</option>
-                    <option value="CO">CO</option>
-                    <option value="CT">CT</option>
-                    <option value="DE">DE</option>
-                    <option value="FL">FL</option>
-                    <option value="GA">GA</option>
-                    <option value="HI">HI</option>
-                    <option value="ID">ID</option>
-                    <option value="IL">IL</option>
-                    <option value="IN">IN</option>
-                    <option value="IA">IA</option>
-                    <option value="KS">KS</option>
-                    <option value="KY">KY</option>
-                    <option value="LA">LA</option>
-                    <option value="ME">ME</option>
-                    <option value="MD">MD</option>
-                    <option value="MA">MA</option>
-                    <option value="MI">MI</option>
-                    <option value="MN">MN</option>
-                    <option value="MS">MS</option>
-                    <option value="MS">MS</option>
-                    <option value="MT">MT</option>
-                    <option value="NE">NE</option>
-                    <option value="NV">NV</option>
-                    <option value="NH">NH</option>
-                    <option value="NJ">NJ</option>
-                    <option value="NM">NM</option>
-                    <option value="NY">NY</option>
-                    <option value="NC">NC</option>
-                    <option value="ND">ND</option>
-                    <option value="OH">OH</option>
-                    <option value="OK">OK</option>
-                    <option value="OR">OR</option>
-                    <option value="PA">PA</option>
-                    <option value="RI">RI</option>
-                    <option value="SC">SC</option>
-                    <option value="SD">SD</option>
-                    <option value="TN">TN</option>
-                    <option value="TX">TX</option>
-                    <option value="UT">UT</option>
-                    <option value="VT">VT</option>
-                    <option value="VA">VA</option>
-                    <option value="WA">WA</option>
-                    <option value="WV">WV</option>
-                    <option value="WI">WI</option>
-                    <option value="WY">WY</option>
-                </select>
-
-            </div>
-
-
-
-
-            <label>Professional License Number</label>
-            <div>
-                <div><input required maxlength="1000" aria-required="true" size="500" type="text" /></div>
-            </div>
-
-            <label>Professional Alma Mater</label>
-            <div>
-                <div><input required maxlength="1000" aria-required="true" size="1000" type="text" /></div>
-            </div>
-
-            <label>Graduation Year</label>
-            <div>
-                <div><input required maxlength="1000" aria-required="true" size="1000" type="text" /></div>
-            </div>
-
-            <br />
-            <p>Please upload an up-to-date CV. We need this for our malpractice insurance. </p>
-
-
-            <div class="control-group file optional registration_person_person_document_file"><label class="file optional control-label required btn file-btn" for="registration_person_attributes_person_documents_attributes_0_file">Document</label><div class="controls"><input accept="application/pdf,.pdf,.doc,.docx" class="file optional required btn file-btn" id="registration_person_attributes_person_documents_attributes_0_file" name="registration[person_attributes][person_documents_attributes][0][file]" type="file" /></div></div>
-            <input id="registration_person_attributes_person_documents_attributes_0_label" name="registration[person_attributes][person_documents_attributes][0][label]" value="Document" type="hidden" />
-
-
-            <input type="submit" name="commit" value="Submit" class="btn btn btn-secondary btn-lg" data-disable-with="Saving..." />
-        </form>
-    </div>
-</div>
+<p>Have you recently volunteered with Surgery on Sunday Louisville, Inc. and wish to leave a comment? <a style="color:crimson" href="~/GetInvolved/VolunteerCommentForm"> Click here!</a></p>
