--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
-        <img class="navbar-brand" src="~/Pictures/SosLouTranspar.png" width="150" height="60" />
+        <img class="navbar-brand" src="~/Pictures/SOS_white_logo.png" width="150" height="60" />
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,8 +26,16 @@
                     </div>
                 </li>
 
-                <li class="nav-item active">
-                    <a class="nav-link" href="~/GetInvolved/GetInvolved">Get Involved</a>
+                <li class="dropdown">
+                    <a class="nav-link" href="~/GetInvolved/GetInvolved"><span style="color:white">Get Involved</span></a>
+                    <div class="dropdown-content">
+                        <a href="~/GetInvolved/NonPhysicianClinicalForm">Non-Physician Clinical Volunteer</a>
+                        <a href="~/GetInvolved/PhysicianForm">Physician Volunteer</a>
+                        <a href="~/GetInvolved/GeneralForm">Non-Clinical General (and Student) Volunteer</a>
+                        <a href="~/GetInvolved/NonPhysicianClinicalForm">Non-Physician Clinical Volunteer</a>
+                        <a href="~/GetInvolved/MedicalInterpreterVolunteer">Medical Interpreter Volunteer</a>
+                        <a href="~/GetInvolved/VolunteerCommentForm">Volunteer Comment Form</a>
+                    </div>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="~/Students/Index">Students</a>
