--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -25,7 +25,11 @@
         padding:0vw !important;
         max-width:none !important;
         max-height:none !important;
-        width:105%
+        width:105%;
+
+
+
+        
 
 
 
@@ -51,7 +55,7 @@
         </div>
 
         <div class="item">
-            <img src="~/Pictures/SOSShirtPic.jpg" alt="Chicago" style="width:100%;">
+            <img src="~/Pictures/SOSShirtPicUse.png" alt="Chicago" style="width:100%; height:100%">
             <div class="carousel-caption">
                 <h3>Our patients NEVER see a bill</h3>
 
@@ -84,97 +88,96 @@
 
 
 
-    <body>
-        <link rel="stylesheet" href="~/Content/bootstrap.css">
+        <body>
+            <link rel="stylesheet" href="~/Content/bootstrap.css">
 
-        <p>
+            <p>
 
-            <h2 class="w3-center"><b>Come be a part of something truly special!</b></h2>
-            <h3 class="w3-center pulsate">
-                <link class="pulsate" rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Pulsing effect.css" /> <img src="~/Pictures/Collage.png" height="400" width="650" />
-            </h3>
+                <h2 class="w3-center"><b>Come be a part of something truly special!</b></h2>
 
-            <div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
-
-
+                <div>
+                    <h3 class="pulsate"><link class="pulsate" rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Pulsing effect.css" /> <img src="~/Pictures/Collage.png" height="400" width="650" /></h3>
+                    <iframe width="560" height="390" src="https://www.youtube.com/embed/oePBye4vrnA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="float:right;position:absolute;top:70vw; left:55vw"></iframe>
+                </div>
 
 
 
 
-            <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
-        <p>
-            <div style="display: flex; justify-content: center;">
-                <br /><iframe width="560" height="315" src="https://www.youtube.com/embed/oePBye4vrnA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="middle"></iframe><br />
-
-            </div>
-        </p><br />
-
-        <p style="padding-left:6vw; padding-right:6vw">
 
 
-            <span style="color:red; font-size:32px">Surgery On Sunday – Louisville, Inc.</span><span style="font-size:20px"> provides outpatient surgical and endoscopic procedures to patients who are within 250% of the current federal poverty line, have medical need, are symptomatic and/or in a high risk healthcare category (such as family history), and are uninsured or underinsured.  Our licensed physicians, medical and non-clinical support staff,  and healthcare partners provide all services on a volunteer basis.</span>  <span style="color:red; font-size:25px"><b> Our patients never see a bill.</b></span> <span style="font-size:20px"> are a non-profit organization based in Louisville, KY. Our program was founded in 2013 by a group of passionate medical professionals and members of the Louisville community.</span>
-            <br /><div style="height:1px; background-color:black; padding-left:1vw; padding-right:1vw;"></div><br />
-        </p>
 
-        <h1>
-            <div style="display: flex; justify-content: center;">
-                <b> Subscribe to our quarterly mailing list:</b><br />
-            </div>
+                <br /><div style="height:1px; background-color:Crimson; padding-left:5vw; padding-right:5vw "></div><br />
+            <p>
 
-        </h1>
+            </p><br />
 
-        <form class="form-style-9">
-            <link rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Form Style.css" />
-            <ul>
-                <li>
-                    <input type="text" name="field1" class="field-style field-split align-left" placeholder="First Name" />
-                </li>
-                <li>
-                    <input type="email" name="field2" class="field-style field-split align-left" placeholder="Last Name" />
-                </li>
-                <li>
-                    <input type="text" name="field3" class="field-style field-full align-left" placeholder="Email Address" />
+            <p style="padding-left:6vw; padding-right:6vw">
 
-                </li>
-                <li>
-                    <input type="submit" value="Subscribe" class="align-left" />
-                    <img src="~/Pictures/SosLouTranspar.png" style="padding-left:10vw" class="align-none" height="250" width="800" />
-                </li>
-            </ul>
-        </form>
 
-        <br /><div style="height:1px; background-color:black; padding-left:1vw; padding-right:1vw;"></div><br />
-        <p>
+                <span style="color:red; font-size:32px">Surgery On Sunday – Louisville, Inc.</span><span style="font-size:20px"> provides outpatient surgical and endoscopic procedures to patients who are within 250% of the current federal poverty line, have medical need, are symptomatic and/or in a high risk healthcare category (such as family history), and are uninsured or underinsured.  Our licensed physicians, medical and non-clinical support staff,  and healthcare partners provide all services on a volunteer basis.</span>  <span style="color:red; font-size:25px"><b> Our patients never see a bill.</b></span> <span style="font-size:20px"> are a non-profit organization based in Louisville, KY. Our program was founded in 2013 by a group of passionate medical professionals and members of the Louisville community.</span>
+                <br /><div style="height:1px; background-color:Crimson; padding-left:1vw; padding-right:1vw;"></div><br />
+            </p>
+
             <h1>
                 <div style="display: flex; justify-content: center;">
-                    <b>Check us out on Social Media!</b>
-
-
+                    <b> Subscribe to our quarterly mailing list:</b><br />
                 </div>
+
             </h1>
 
+            <form class="form-style-9">
+                <link rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Form Style.css" />
+                <ul>
+                    <li>
+                        <input type="text" name="field1" class="field-style field-split align-left" placeholder="First Name" />
+                    </li>
+                    <li>
+                        <input type="email" name="field2" class="field-style field-split align-left" placeholder="Last Name" />
+                    </li>
+                    <li>
+                        <input type="text" name="field3" class="field-style field-full align-left" placeholder="Email Address" />
 
-            <br /><br /> <section>
-                <img src="~/Pictures/twitterLogo.png" alt="Logo" width=80 height="80" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer; position:relative; top:0px; left:730px;" /><img />
-                <img src="~/Pictures/Facebooklogo.png" alt="Logo" width=85 height="85" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer; position:relative; top:0px; left:200px;" /><img /><br />
+                    </li>
+                    <li>
+                        <input type="submit" value="Subscribe" class="align-left" />
 
-                <br />
-                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSurgeryonSundayLouisville%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden; position:relative; left:10vw; top:0vw" scrolling="no" frameborder="0" allowTransparency="true"></iframe> <!--change position for widget using position:fixed-->
+                    </li>
+                </ul>
+            </form>
+            <img src="~/Pictures/SosLouTranspar.png" style="position:absolute; bottom:-82vw; right:20vw" class="align-none" height="250" width="650" />
 
-
-                <div style="position:relative; top:-34.5vw; left:40vw">
-                    <a class="twitter-timeline" data-width="340" data-height="515" href="https://twitter.com/soslouisville?ref_src=twsrc%5Etfw">Tweets by soslouisville</a>
-                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                </div>
-
-
-            </section>
-
+            <br /><div style="height:1px; background-color:Crimson; padding-left:1vw; padding-right:1vw;"></div><br />
+            <p>
+                <h1>
+                    <div style="display: flex; justify-content: center;">
+                        <b>Check us out on Social Media!</b>
 
 
-        </p>
+                    </div>
+                </h1>
 
-    </body>
+
+                <br /><br /> <section>
+                    <img src="~/Pictures/twitterLogo.png" alt="Logo" width=80 height="80" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer; position:relative; top:0px; left:730px;" /><img />
+                    <img src="~/Pictures/Facebooklogo.png" alt="Logo" width=85 height="85" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer; position:relative; top:0px; left:200px;" /><img /><br />
+
+                    <br />
+                    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSurgeryonSundayLouisville%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden; position:relative; left:10vw; top:0vw" scrolling="no" frameborder="0" allowTransparency="true"></iframe> <!--change position for widget using position:fixed-->
+
+
+                    <div style="position:relative; top:-34.5vw; left:40vw">
+                        <a class="twitter-timeline" data-width="340" data-height="515" href="https://twitter.com/soslouisville?ref_src=twsrc%5Etfw">Tweets by soslouisville</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    </div>
+
+
+                </section>
+
+
+
+            </p>
+
+        </body>
 
 
 
