fixed padding issues

--- a/WebApplication3/Views/GetInvolved/NonPhysicianClinicalForm.cshtml
+++ b/WebApplication3/Views/GetInvolved/NonPhysicianClinicalForm.cshtml
@@ -12,7 +12,7 @@
 <head>
 
 </head>
-<body class="public_registrations new  theme-default main-menu-animated" style="">
+<body class="public_registrations new  theme-default main-menu-animated" >
     <!--[if lte IE 8]>
     <style>
       input {
@@ -57,7 +57,7 @@
 
 
                     <!-- Main form -->
-                    <div class="grid-50 tablet-grid-50 mobile-grid-100">
+                    <div class="grid-50 tablet-grid-50 mobile-grid-100" >
                         <div class="infoCard formPanel campaignInfo">
                             <form class="simple_form new_registration" id="new_registration" action="/public/registrations" accept-charset="UTF-8" method="post">
                                 <input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="GZobofcpjjAHk5/hqa7qpOL5CP/jJBGCZAJIQlfz80hnMabCxdoJhMvEHJItpkfPZxoi+XCJ5jpoMnw1MB3x3Q==" />
