--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -50,8 +50,8 @@
                     <a class="nav-link" href="~/Account/Register">Register</a>
                 </li>
             </ul>
-            <img src="~/Pictures/twitterLogo.png" width="60" height="60" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer" /><img />
-            <img src="~/Pictures/Facebooklogo.png" width="60" height="60" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer"/><img />
+            <img src="~/Pictures/TwitterJustBird.png" width="35" height="25" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer" /><img />
+            <img src="~/Pictures/FacebookWhite.png" width="30" height="28" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer; padding-left:4px"/><img />
 
         </div>
     </nav>
