--- a/WebApplication3/Views/GetInvolved/PhysicianForm.cshtml
+++ b/WebApplication3/Views/GetInvolved/PhysicianForm.cshtml
@@ -16,9 +16,7 @@
     </span>
     <br />
 
-        <div id="right" style="float:right; width:50%; position:fixed; top:10vw; right:5vw; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);padding:1vw">
-            Surgery on Sunday Louisville independently credentials each of its physician volunteers following the method developed by The Joint Commission. That process requires us to query physician information through the National Practitioner Database, a service provided by the United States Department of Health and Human Services. Completion of this form serves as the agreement of the volunteer to allow Surgery on Sunday Louisville to perform such query. Questions about this process can be directed to info@soslouisville.org.
-        </div>
+  
     </div>
     <div link rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/inputboxes.css" style="padding-left:5vw; padding-right:5vw">
         <label>First Name</label>
@@ -79,7 +77,7 @@
             <br />
 
         </div>
-        <div style="height:120px;width:120px;border:1px solid #ccc;overflow:auto;">
+        <div style="height:5vw;width:10vw;border:1px solid #ccc;overflow:auto;">
             <div class="checkbox"><label><input name="regionStates[]" type="checkbox" value="AK">Alaska</label></div>
             <div class="checkbox"><label><input name="regionStates[]" type="checkbox" value="AL">Alabama</label></div>
             <div class="checkbox"><label><input name="regionStates[]" type="checkbox" value="AR">Arkansas</label></div>
