--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -95,10 +95,10 @@
             <p>
 
                 <h2 class="w3-center"><b>Come be a part of something truly special!</b></h2>
-
+                <iframe width="560" height="390" src="https://www.youtube.com/embed/oePBye4vrnA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="float:right;position:relative;"></iframe>
                 <div>
                     <h3 class="pulsate"><link class="pulsate" rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Pulsing effect.css" /> <img src="~/Pictures/Collage.png" height="400" width="650" /></h3>
-                    <iframe width="560" height="390" src="https://www.youtube.com/embed/oePBye4vrnA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="float:right;position:absolute;top:70vw; left:55vw"></iframe>
+
                 </div>
 
 
@@ -108,7 +108,7 @@
 
 
                 <br /><div style="height:1px; background-color:Crimson; padding-left:5vw; padding-right:5vw "></div><br />
-            <p>
+<p>
 
             </p><br />
 
@@ -141,11 +141,11 @@
                     </li>
                     <li>
                         <input type="submit" value="Subscribe" class="align-left" />
-
+                        <img src="~/Pictures/SosLouTranspar.png" class="align-none" height="250" width="650" />
                     </li>
                 </ul>
             </form>
-            <img src="~/Pictures/SosLouTranspar.png" style="position:absolute; bottom:-82vw; right:20vw" class="align-none" height="250" width="650" />
+            
 
             <br /><div style="height:1px; background-color:Crimson; padding-left:1vw; padding-right:1vw;"></div><br />
             <p>
@@ -163,13 +163,15 @@
                     <img src="~/Pictures/Facebooklogo.png" alt="Logo" width=85 height="85" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer; position:relative; top:0px; left:200px;" /><img /><br />
 
                     <br />
-                    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSurgeryonSundayLouisville%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden; position:relative; left:10vw; top:0vw" scrolling="no" frameborder="0" allowTransparency="true"></iframe> <!--change position for widget using position:fixed-->
-
-
-                    <div style="position:relative; top:-34.5vw; left:40vw">
-                        <a class="twitter-timeline" data-width="340" data-height="515" href="https://twitter.com/soslouisville?ref_src=twsrc%5Etfw">Tweets by soslouisville</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    <div style="position:relative; left:10vw; top:0vw">
+                        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSurgeryonSundayLouisville%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden; float:left " scrolling="no" frameborder="0" allowTransparency="true"></iframe> <!--change position for widget using position:fixed-->
+                        <div style="position:relative;">
+                            <a class="twitter-timeline"style="float:right"  data-width="340" data-height="515" href="https://twitter.com/soslouisville?ref_src=twsrc%5Etfw">Tweets by soslouisville</a>
+                            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
                     </div>
+
+                    
 
 
                 </section>
