--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -21,7 +21,7 @@
         <div class="container-fluid" style="
         margin-left:-1vw !important;
         margin-right:-1vw!important;
-        margin-top:-1.6vw!important;
+        margin-top:-1vw!important;
         padding:0vw !important;
         max-width:none !important;
         max-height:none !important;
@@ -159,20 +159,20 @@
 
 
                 <br /><br /> <section>
-                    <img src="~/Pictures/twitterLogo.png" alt="Logo" width=80 height="80" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer; position:relative; top:0px; left:730px;" /><img />
-                    <img src="~/Pictures/Facebooklogo.png" alt="Logo" width=85 height="85" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer; position:relative; top:0px; left:200px;" /><img /><br />
-
-                    <br />
-                    <div style="position:relative; left:10vw; top:0vw">
-                        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSurgeryonSundayLouisville%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden; float:left " scrolling="no" frameborder="0" allowTransparency="true"></iframe> <!--change position for widget using position:fixed-->
-                        <div style="position:relative;">
-                            <a class="twitter-timeline"style="float:right"  data-width="340" data-height="515" href="https://twitter.com/soslouisville?ref_src=twsrc%5Etfw">Tweets by soslouisville</a>
-                            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        </div>
-                    </div>
-
-                    
-
+                                 <div style="display:flex; justify-content:center;">
+                                     <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSurgeryonSundayLouisville%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="485" style="border:none;overflow:hidden; float:left " scrolling="no" frameborder="0" allowTransparency="true"></iframe> <!--change position for widget using position:fixed-->
+                                     <div style="position:relative;padding-left:3vw;">
+                                         <a class="twitter-timeline" style="float:right;" data-width="340" data-height="500" href="https://twitter.com/soslouisville?ref_src=twsrc%5Etfw">Tweets by soslouisville</a>
+                                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                                     </div>
+                                     <!-- InstaWidget -->
+                                     <!-- InstaWidget -->
+                                     <!-- InstaWidget -->
+                                     <div style="padding-left:3vw">
+                                         <a href="https://instawidget.net/v/user/SOSLouisville" id="link-2dc24f4b963a2bf72116aee89765d4754c7eef9171071acd2fce0c0b9f0701fa">soslouisville</a>
+                                         <script src="https://instawidget.net/js/instawidget.js?u=2dc24f4b963a2bf72116aee89765d4754c7eef9171071acd2fce0c0b9f0701fa&width=300px"></script>
+                                     </div>
+                                 </div>
 
                 </section>
 
